mock-exams/ckad/19/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-service-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: "k8s-demo.ddns.net"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-service
            port:
              number: 80
